2012-10-23  Charlie Zender  <zender@uci.edu>

	* Adopt new naming convention in hand-written netCDF4 CDL files:
	g4g1g1 is the first subgroup of	g4g1 which is the first subgroup
	of g4 which is the fourth subgroup of /. The level of the group
	can be determined by counting the g's.

2012-10-22  Charlie Zender  <zender@uci.edu>

	* Built netCDF library patch for real nc_rename_grp() function:
	  http://dust.ess.uci.edu/tmp/nc_rename_grp.tar.gz
	  Function currently dies in H5Gmove() for unknown reasons
	  Details nc_rename_grp() in nco_netcdf.c

	* Wrote nc_rename_grp() stubs for distribution now with NCO

	* Call nco_rename_grp() from ncrename

	* Implement library stubs for nc_rename_grp()/nco_rename_grp()

	* Modify in_grp.cdl to allow for new tests

2012-10-21  Charlie Zender  <zender@uci.edu>

	* Prepare ncrename for -g group renaming arguments

	* ncks/ncecat -G accepts extended (depth > 1, multi-component) group names

2012-10-20  Charlie Zender  <zender@uci.edu>

	* Implement nco_def_grp_full() to define root group for extracted variables

	* Remake ncks -G --gag grp_out as root group for ouput à la ncecat

	* Deprecate ncks -G into ncks --get_grp_info

2012-10-19  Charlie Zender  <zender@uci.edu>

 	* NCO 4.2.2 release procedure:
 	Changes since nco-4_2_1: ncks groups, hdr_pad, NULs, ncecat GAG
	cd ~/nco;cvs tag -d nco-4_2_2;cvs tag -d nco-4_2_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.2 release"
	cvs tag -c nco-4_2_2;cvs tag -c nco-4_2_2-1

	* Add Debian hardening tokens to bld/Makefile

	* Add ncecat -G regression test

	* ncecat -G appears to work on netCDF3 and netCDF4 files

	* Add in_grp.cdl -> in_grp.nc rules to configure and bld/Makefile

2012-10-18  Charlie Zender  <zender@uci.edu>

	* ncecat -G makes it through first file but nco4_var_lst_mk() needs re-initialization

	* Make nco4_inq_trv() return values only if pointers non-NULL

2012-10-16  Charlie Zender  <zender@uci.edu>

	* Merged ncks group code into ncecat GROUP_AGGREGATE code
